--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -51,7 +51,10 @@ body {
   background: linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
 }
 
-
+.accountBtn {
+  position: relative;
+  left: 175px;
+}
 #progressbar {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -87,7 +90,7 @@ body {
   margin: 0 auto 5px auto;
   
   position: relative;
-  left: -20px;
+  left: -3px;
 }
 /*progressbar connectors*/
 #progressbar li:after {
